<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.naeem.fetchgithubuserslist_mvvm_room.model.UserRepoModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_post_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintGuide_percent="0.85" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/text_post_header"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"

                android:transitionName="photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />



            <TextView
                android:id="@+id/tv_follower"

                android:layout_width="0dp"
                android:layout_height="wrap_content"


                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text='@{"Followers: "+item.followers }'
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="@tools:sample/lorem" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
            <TextView
                android:id="@+id/tv_following"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text='@{"Following: "+item.following}'
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="@tools:sample/full_names" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_info"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_follower">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="@dimen/_5sdp"


                        android:text='@{item.name ?? ""}'

                        android:textSize="@dimen/_10sdp"

                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        tools:text="@tools:sample/lorem" />


                    <TextView
                        android:id="@+id/tv_companytitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/company"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />


                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="@dimen/_5sdp"


                        android:text='@{item.company ?? ""}'

                        android:textSize="@dimen/_10sdp"

                        app:layout_constraintStart_toEndOf="@+id/tv_companytitle"
                        app:layout_constraintTop_toTopOf="@+id/tv_companytitle"
                        tools:text="@tools:sample/lorem" />


                    <TextView
                        android:id="@+id/tv_blogtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_companytitle" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="@dimen/_5sdp"


                        android:text='@{item.blog ?? ""}'

                        android:textSize="@dimen/_10sdp"

                        app:layout_constraintStart_toEndOf="@+id/tv_blogtitle"
                        app:layout_constraintTop_toTopOf="@+id/tv_blogtitle"
                        tools:text="@tools:sample/lorem" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/note"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_info" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_note">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/edt_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enternote"
                        android:inputType="textMultiLine"
                        android:minLines="6"
                        android:text='@{item.note ?? ""}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView

                        android:id="@+id/btn_note"
                        android:layout_width="@dimen/_80sdp"


                        android:layout_height="@dimen/_30sdp"

                        android:background="@color/black"

                        android:textSize="@dimen/_12sdp"
                        android:text="@string/save"
                        android:textColor="@color/white"

                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_note" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>